fix word break on links in description

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -22,11 +22,10 @@ img {
   display: block;
 }
 
-li::marker {
-  color: v.$violet;
-}
+li::marker { color: v.$violet;}
 
 a {
+  word-break: break-all;
   color: v.$violet;
 }
 
